added a new field in the content

--- a/content/clean-code/02-naming-conventions-and-meaningfull-names.mdx
+++ b/content/clean-code/02-naming-conventions-and-meaningfull-names.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-02
 title: Naming Conventions & Meaningful Names
 description: Learn how to choose meaningful variable, function, and class names for better readability.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
