--- a/content/clean-code/03-writing-small-and-focused-functions.mdx
+++ b/content/clean-code/03-writing-small-and-focused-functions.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-03
 title: Writing Small & Focused Functions
 description: Understand the Single Responsibility Principle (SRP) and how to break large functions into smaller ones.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
