--- a/content/clean-code/04-code-formatting-and-readability.mdx
+++ b/content/clean-code/04-code-formatting-and-readability.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-04
 title: Code Formatting & Readability
 description: Explore proper indentation, spacing, and structuring of code for better readability.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
