--- a/content/clean-code/06-reducing-complexity-and-writing-simple-code.mdx
+++ b/content/clean-code/06-reducing-complexity-and-writing-simple-code.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-06
 title: Reducing Complexity & Writing Simple Code
 description: Learn how to refactor code to reduce complexity using design patterns and modularity.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
