--- a/content/clean-code/07-writing-self-documenting-code.mdx
+++ b/content/clean-code/07-writing-self-documenting-code.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-07
 title: Writing Self-Documenting Code
 description: Understand how to write code that explains itself without the need for excessive comments.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
