--- a/content/clean-code/09-consistent-coding-style-and-standards.mdx
+++ b/content/clean-code/09-consistent-coding-style-and-standards.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-09
 title: Consistent Coding Style & Standards
 description: Explore language-specific coding standards and how to enforce consistency in teams.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
