--- a/content/clean-code/12-refactoring-for-clean-code.mdx
+++ b/content/clean-code/12-refactoring-for-clean-code.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-12
 title: Refactoring for Clean Code
 description: Apply refactoring techniques to improve code structure without altering functionality.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
