--- a/content/clean-code/13-code-review-and-improvement.mdx
+++ b/content/clean-code/13-code-review-and-improvement.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-13
 title: Clean Code Review & Improvement Project
 description: Analyze a poorly written codebase and improve its readability and structure.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
