--- a/content/data-structure/01-introduction-to-data-structure.mdx
+++ b/content/data-structure/01-introduction-to-data-structure.mdx
@@ -3,7 +3,8 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-01
 title: Introduction to Data Structure
 description: Understand the importance of data structures, their classifications, and how they enhance problem-solving.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Introduction to Data Structures
