--- a/content/data-structure/02-array.mdx
+++ b/content/data-structure/02-array.mdx
@@ -3,7 +3,8 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-01
 title: Arrays Data Structure
 description: Learn about arrays, their operations, and use cases in real-world applications.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Arrays Data Structure
