--- a/content/data-structure/04-stack.mdx
+++ b/content/data-structure/04-stack.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-06
 title: Stack Data Structure
 description: Learn about stack data structure and its applications.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
