--- a/content/data-structure/05-queue.mdx
+++ b/content/data-structure/05-queue.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-07
 title: Queue Data Structure
 description: Learn about queues and their variations.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
