--- a/content/dbms/01-introduction-to-dbms.mdx
+++ b/content/dbms/01-introduction-to-dbms.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-01
 title: Introduction to DBMS
 description: Learn the fundamentals of DBMS, including its history, features, types of databases, and first hands-on experience with SQL.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Introduction to DBMS
@@ -23,6 +24,8 @@ Real-World Uses of Databases:
 - Websites like Amazone store product details, customer data, and order history in databases.
 - Banks manage account details, transactions, and customer records through databases.
 - Platfrom like Facebook and Instagram store user profiles, posts, and interactions in databases.
+
+![Database](/images/DATABASE.png)
 
 ## What is a File System?
 
