--- a/content/dbms/02-database-models-and-er-diagrams.mdx
+++ b/content/dbms/02-database-models-and-er-diagrams.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-02
 title: Database Models & ER Diagrams
 description: Understand different database models and learn to design ER diagrams for real-world applications.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Introduction to Database Models and ER Diagrams
