--- a/content/dbms/07-deadlocks-and-recovery-in-dbms.mdx
+++ b/content/dbms/07-deadlocks-and-recovery-in-dbms.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-07
 title: Deadlocks & Recovery in DBMS
 description: Understand deadlocks, detection techniques, and database recovery mechanisms.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Deadlocks and Recovery in DBMS
