--- a/content/dbms/08-storage-management-and-file-organization.mdx
+++ b/content/dbms/08-storage-management-and-file-organization.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-08
 title: Storage Management & File Organization
 description: Explore storage hierarchy, file organization techniques, and RAID storage.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Storage Management and File Organization
