--- a/content/dbms/09-nosql-vs-sql-databases.mdx
+++ b/content/dbms/09-nosql-vs-sql-databases.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-09
 title: NoSQL vs SQL Databases
 description: Compare SQL and NoSQL databases and learn when to use each.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # NoSQL vs SQL Databases
