--- a/content/dbms/12-big-data-and-distributed-databases.mdx
+++ b/content/dbms/12-big-data-and-distributed-databases.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-12
 title: Big Data & Distributed Databases
 description: Explore concepts of big data, Hadoop, and distributed database management.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Big Data & Distributed Databases
