--- a/content/dbms/13-database-security-and-encription.mdx
+++ b/content/dbms/13-database-security-and-encription.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-13
 title: Database Security & Encryption
 description: Understand authentication, authorization, and encryption techniques in databases.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Database Security & Encryption
