--- a/content/dbms/14-backup-and-disaster-recovery.mdx
+++ b/content/dbms/14-backup-and-disaster-recovery.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-14
 title: Backup & Disaster Recovery
 description: Learn strategies for database backup and disaster recovery planning.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Backup & Disaster Recovery
