--- a/content/design-pattern/03-singleton-pattern.mdx
+++ b/content/design-pattern/03-singleton-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-03
 title: Singleton Pattern
 description: Ensure a class has only one instance and provides a global access point.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
