--- a/content/design-pattern/08-structural-desing-pattern-overview.mdx
+++ b/content/design-pattern/08-structural-desing-pattern-overview.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-08
 title: Structural Design Patterns Overview
 description: Learn patterns that define object relationships to ensure a flexible and efficient structure.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
