--- a/content/design-pattern/13-observer-pattern.mdx
+++ b/content/design-pattern/13-observer-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-13
 title: Observer Pattern
 description: Establish a one-to-many dependency between objects.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
