--- a/content/sql/01-introduction-to-sql.mdx
+++ b/content/sql/01-introduction-to-sql.mdx
@@ -3,5 +3,26 @@ guideId: SQL-101
 moduleId: SQL-01
 title: Introduction to SQL
 description: Learn what SQL is, its history, and why it is important in database management.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
+
+# Introduction to SQL
+
+Structured Query Language (SQL) is a standard language for managing relational databases. It is used to perform various operations on databases such as creating, updating, deleting, and retrieving data. SQL is a powerful language that allows you to interact with databases in a simple and efficient way.
+
+## History of SQL
+
+SQL was developed in the early 1970s by IBM researchers Raymond Boyce and Donald Chamberlin. It was initially called SEQUEL (Structured English Query Language) and was designed to manipulate and retrieve data stored in IBM's System R database. In 1979, the name was changed to SQL to avoid trademark issues.
+
+SQL became an ANSI (American National Standards Institute) standard in 1986 and an ISO (International Organization for Standardization) standard in 1987. Since then, SQL has become the de facto standard for relational database management systems.
+
+## Importance of SQL
+
+SQL is an essential tool for anyone working with databases. It allows you to interact with databases in a simple and efficient way, making it easy to perform complex operations on large datasets. SQL is widely used in various industries, including finance, healthcare, e-commerce, and more.
+
+Learning SQL can open up a world of opportunities for you, as it is a highly sought-after skill in the job market. Whether you are a data analyst, software developer, or database administrator, having a strong understanding of SQL can help you advance your career and work more effectively with data.
+
+In this guide series, we will cover the basics of SQL, including how to set up your SQL environment, create databases and tables, insert and retrieve data, and perform advanced queries. By the end of this guide, you will have a solid foundation in SQL that you can use to work with databases effectively.
+
+Let's get started!
