--- a/content/sql/04-constraints-and-rules.mdx
+++ b/content/sql/04-constraints-and-rules.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-04
 title: SQL Constraints & Rules
 description: Learn about PRIMARY KEY, FOREIGN KEY, UNIQUE, CHECK, and NOT NULL constraints in SQL.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
