--- a/content/sql/05-basic-queries.mdx
+++ b/content/sql/05-basic-queries.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-05
 title: Basic SQL Queries
 description: Learn SELECT, INSERT, UPDATE, DELETE queries and basic filtering with WHERE.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
