--- a/content/sql/07-views-indexing-and-performance-optimization.mdx
+++ b/content/sql/07-views-indexing-and-performance-optimization.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-07
 title: SQL Views, Indexing & Performance Optimization
 description: Learn how to create views, use indexing, and optimize query performance.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
