--- a/content/sql/08-stored-procedures-and-triggers.mdx
+++ b/content/sql/08-stored-procedures-and-triggers.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-08
 title: Stored Procedures & Triggers
 description: Understand stored procedures, functions, and triggers in SQL.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
