--- a/content/sql/09-transactions-and-concurrency.mdx
+++ b/content/sql/09-transactions-and-concurrency.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-09
 title: Transactions & Concurrency Control
 description: Learn about ACID properties, transactions, and handling concurrent operations.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
