--- a/content/sql/12-final-sql-capstone-project.mdx
+++ b/content/sql/12-final-sql-capstone-project.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-12
 title: Final SQL Capstone Project
 description: Build a complete HR management system using SQL.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
