--- a/content/clean-code/05-eliminating-code-smells.mdx
+++ b/content/clean-code/05-eliminating-code-smells.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-05
 title: Eliminating Code Smells
 description: Identify and fix bad coding practices like duplicated code, long functions, and excessive comments.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
