--- a/content/clean-code/08-effective-error-handling-and-exception-management.mdx
+++ b/content/clean-code/08-effective-error-handling-and-exception-management.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-08
 title: Effective Error Handling & Exception Management
 description: Learn best practices for handling errors gracefully and improving system reliability.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
