--- a/content/clean-code/10-avoiding-over-engineering-and-keep-it-simple.mdx
+++ b/content/clean-code/10-avoiding-over-engineering-and-keep-it-simple.mdx
@@ -3,5 +3,6 @@ guideId: CLEAN-CODE-101
 moduleId: CLEAN-CODE-10
 title: Avoiding Over-Engineering & Keeping It Simple
 description: Understand when to stop adding unnecessary complexity and keep the codebase simple.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
