--- a/content/data-structure/03-linked-list.mdx
+++ b/content/data-structure/03-linked-list.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-05
 title: Linked List Data Structure
 description: Learn about linked lists, types, and operations.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
