--- a/content/data-structure/06-hashing-and-hash-tables.mdx
+++ b/content/data-structure/06-hashing-and-hash-tables.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-08
 title: Hashing & Hash Tables
 description: Learn about hashing and hash table implementations.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
