--- a/content/data-structure/07-trees.mdx
+++ b/content/data-structure/07-trees.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-09
 title: Trees Data Structure
 description: Understand tree data structures and their applications.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
