--- a/content/data-structure/08-graph.mdx
+++ b/content/data-structure/08-graph.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-10
 title: Graph Data Structure
 description: Learn graph concepts and graph traversal techniques.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
