--- a/content/data-structure/09-heap-and-priority-queue.mdx
+++ b/content/data-structure/09-heap-and-priority-queue.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-11
 title: Heap & Priority Queue
 description: Understand heap properties and priority queues.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
