--- a/content/data-structure/10-advance-data-structures.mdx
+++ b/content/data-structure/10-advance-data-structures.mdx
@@ -3,5 +3,6 @@ guideId: DATA-STRUCTURE-101
 moduleId: DS-12
 title: Advanced Data Structures
 description: Explore advanced data structures used in high-performance applications.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
