--- a/content/dbms/05-indexing-and-hashing.mdx
+++ b/content/dbms/05-indexing-and-hashing.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-05
 title: Indexing & Hashing
 description: Understand indexing methods, B-trees, and hashing techniques to optimize database performance.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Indexing & Hashing
