--- a/content/dbms/06-transactions-and-concurrency-control.mdx
+++ b/content/dbms/06-transactions-and-concurrency-control.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-06
 title: Transactions & Concurrency Control
 description: Learn about ACID properties, transaction states, and concurrency control mechanisms.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Transactions & Concurrency Control
