--- a/content/dbms/10-dbms-case-studies-and-real-world-use-cases.mdx
+++ b/content/dbms/10-dbms-case-studies-and-real-world-use-cases.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-10
 title: DBMS Case Studies & Real-World Use Cases
 description: Analyze real-world DBMS implementations in banking, e-commerce, and social media.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # DBMS Case Studies & Real-World Use Cases
