--- a/content/dbms/11-sharding-and-replication-strategies.mdx
+++ b/content/dbms/11-sharding-and-replication-strategies.mdx
@@ -3,7 +3,8 @@ guideId: DBMS-101
 moduleId: DBMS-11
 title: Sharding & Replication Strategies
 description: Learn database partitioning, replication strategies.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
 
 # Sharding & Replication Strategies
