--- a/content/design-pattern/01-introduction-to-design-patterns.mdx
+++ b/content/design-pattern/01-introduction-to-design-patterns.mdx
@@ -3,5 +3,18 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-01
 title: Introduction to Design Patterns
 description: Understand what design patterns are, why they are important, and how they improve code reusability and maintainability.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
+
+```mermaid
+{/* class diagram */}
+classDiagram
+    class DesignPatterns {
+        +introductionToDesignPatterns()
+    }
+    class DesignPatternsClient {
+        +main()
+    }
+    DesignPatterns <|-- DesignPatternsClient
+```
