--- a/content/design-pattern/02-creational-design-pattern-overview.mdx
+++ b/content/design-pattern/02-creational-design-pattern-overview.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-02
 title: Creational Design Patterns Overview
 description: Learn about patterns that deal with object creation, improving flexibility and code reuse.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
