--- a/content/design-pattern/04-factory-pattern.mdx
+++ b/content/design-pattern/04-factory-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-04
 title: Factory Pattern
 description: Encapsulate object creation logic inside a dedicated factory class.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
