--- a/content/design-pattern/05-abstract-factory-pattern.mdx
+++ b/content/design-pattern/05-abstract-factory-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-05
 title: Abstract Factory Pattern
 description: Provide an interface for creating families of related objects without specifying concrete classes.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
