--- a/content/design-pattern/06-builder-pattern.mdx
+++ b/content/design-pattern/06-builder-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-06
 title: Builder Pattern
 description: Simplify the creation of complex objects step by step.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
