--- a/content/design-pattern/07-prototype-pattern.mdx
+++ b/content/design-pattern/07-prototype-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-07
 title: Prototype Pattern
 description: Clone existing objects instead of creating new ones from scratch.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
