--- a/content/design-pattern/09-adapter-pattern.mdx
+++ b/content/design-pattern/09-adapter-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-09
 title: Adapter Pattern
 description: Convert an existing interface into another interface clients expect.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
