--- a/content/design-pattern/10-decorator-pattern.mdx
+++ b/content/design-pattern/10-decorator-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-10
 title: Decorator Pattern
 description: Dynamically add behavior to objects at runtime.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
