--- a/content/design-pattern/11-proxy-pattern.mdx
+++ b/content/design-pattern/11-proxy-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-11
 title: Proxy Pattern
 description: Control access to objects through proxy classes.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
