--- a/content/design-pattern/12-behavioral-design-pattern-overview.mdx
+++ b/content/design-pattern/12-behavioral-design-pattern-overview.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-12
 title: Behavioral Design Patterns Overview
 description: Learn patterns that focus on object communication and behavior.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
