--- a/content/design-pattern/14-strategy-pattern.mdx
+++ b/content/design-pattern/14-strategy-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-14
 title: Strategy Pattern
 description: Encapsulate algorithms inside interchangeable classes.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
