--- a/content/design-pattern/15-command-pattern.mdx
+++ b/content/design-pattern/15-command-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-15
 title: Command Pattern
 description: Encapsulate commands as objects to enable undo/redo functionalities.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
