--- a/content/design-pattern/16-wrap-up-design-pattern.mdx
+++ b/content/design-pattern/16-wrap-up-design-pattern.mdx
@@ -3,5 +3,6 @@ guideId: DESIGN-PATTERNS-101
 moduleId: DESIGN-PATTERNS-16
 title: Applying Design Patterns in a Project
 description: Work on a real-world project using multiple design patterns.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
