--- a/content/sql/06-joins-and-subqueries.mdx
+++ b/content/sql/06-joins-and-subqueries.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-06
 title: SQL Joins & Subqueries
 description: Understand INNER, LEFT, RIGHT, FULL joins and write effective subqueries.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
