--- a/content/sql/11-top-50-sql-interview-questions.mdx
+++ b/content/sql/11-top-50-sql-interview-questions.mdx
@@ -3,5 +3,6 @@ guideId: SQL-101
 moduleId: SQL-11
 title: Top 50 SQL Interview Questions
 description: Practice frequently asked SQL questions for technical interviews.
-author: SystemNode Team
+author: Prince Kumar Prasad
+author_url: https://www.linkedin.com/in/prince63/
 ---
